Navigation opener stroke added and z-index corrected

--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -2,9 +2,7 @@
     position: fixed;
     width: 15.5%;
     height: 100%;
-    z-index: -1000;
     background-color: #000;
-    height: 100%;
     z-index: 1000;
     border-right: 2px solid #fff;
     transform: translateX(-100%);
@@ -89,7 +87,9 @@
     position: fixed;
     left: 43px;
     top: 20px;
-    z-index: 50;
+    stroke-width: 10px;
+    stroke: #000;
+    z-index: 100;
     svg {
         color: #fff;
         font-size: 40px;
